--- a/app/assets/stylesheets/showexperiment.scss
+++ b/app/assets/stylesheets/showexperiment.scss
@@ -10,9 +10,9 @@
 .show-exp-image {
 	width: 100%;
   background-size: cover;
-  height: 50vh;
+  height: 55vh;
   margin-top: 2em;
-  opacity: 0.6;
+  opacity: 0.8;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -63,14 +63,21 @@
 	width: 80%;
 	margin: 0.5em auto;
 	font-size: 0.85em;
+	text-align: center;
+	padding-top: 1.5em;
+	&:after {
+		content: "";
+		display: inline-block;
+		width: 100%;
+	}
 }
 
 .show-concept-icon, .age, .time, .mess {
 	display: inline-block;
 	position: relative;
 	text-align: center;
-	padding: 1em 1.9em;
 	font-size: 1.2em;
+	padding: 0 2.5em 0;
 }
 
 .show-likes {
