--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,9 +1,3 @@
-#landing {
-  position: relative;
-  z-index: 1;
-  padding: 3.5em;
-}
-
 #signup-bg, #login-bg {
  background-image: asset_url("discovery-crop.jpg");
  width: 100%;
